--- a/Sass/pages/index/_header.scss
+++ b/Sass/pages/index/_header.scss
@@ -3,14 +3,15 @@ header {
   background-position: center;
   background-size: cover;
   height: 240px;
-  position: relative;
-  z-index: 1;
   .header {
     display: flex;
-    justify-content: space-between;
+    gap: 3rem;
     align-items: center;
-    .header-ogo {
-      img {
+    position: fixed;
+    z-index: 10;
+    margin-left: 8rem;
+    a {
+      .header-img {
         width: 80%;
       }
     }
@@ -33,13 +34,11 @@ header {
     }
     .header-link {
       display: flex;
-      justify-content: space-between;
       align-items: center;
-      width: 22%;
+      gap: 1rem;
       .btn-header {
         transition: all 0.5s;
         outline: none;
-        display: block;
         @include button(
           $text-xm,
           $text-semibold,
@@ -55,17 +54,22 @@ header {
           border: $border;
         }
       }
+
       .fa-twitter {
         color: #1d9bf0;
+        margin: 0 0.5rem;
       }
       .fa-facebook {
         color: #4867aa;
+        margin: 0 0.5rem;
       }
       .fa-youtube-play {
         color: #ed352d;
+        margin: 0 0.5rem;
       }
       .fa-instagram {
         color: #bd3187;
+        margin: 0 0.5rem;
       }
     }
   }
