--- a/Sass/pages/index/_carousel.scss
+++ b/Sass/pages/index/_carousel.scss
@@ -1,8 +1,9 @@
 .carousel {
+  top: -290px;
   .carousel_item {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     .carousel-left {
       span {
         @include text($text-xl, $text-semibold, $text-c1-primary);
@@ -16,12 +17,13 @@
           $text-semibold,
           $text-white,
           $bg-c1-primary,
-          15px 35px,
-          none,
+          12px 30px,
+          $border,
           50px
         );
         text-transform: uppercase;
         outline: none;
+        margin-top: 1rem;
         &:hover {
           color: $text-c1-primary;
           background-color: $bg-white;
@@ -31,14 +33,31 @@
       }
     }
     .carousel-right {
+      z-index: 1;
+      .img-girl {
+        width: 130%;
+        margin-left: -25%;
+      }
       .carousel-img {
         .img-hello {
+          top: 8rem;
+          right: 15rem;
+          position: absolute;
         }
         .img-ciao {
+          top: 22rem;
+          right: 6rem;
+          position: absolute;
         }
         .img-bonjour {
+          top: 39rem;
+          right: 9rem;
+          position: absolute;
         }
         .img-guten {
+          top: 39rem;
+          right: 42rem;
+          position: absolute;
         }
       }
     }
