--- a/Sass/pages/index/_header.scss
+++ b/Sass/pages/index/_header.scss
@@ -1,8 +1,9 @@
 header {
   background: url(../../../img/yellow_top_wave_01.png);
-  background-position: center;
-  background-size: cover;
+  background-position: left top;
+  background-size: contain;
   height: 240px;
+  background-repeat: no-repeat;
   .header {
     display: flex;
     gap: 3rem;
@@ -16,13 +17,12 @@ header {
       }
     }
     .header-nav {
-      padding-left: 20%;
+      padding-left: 15rem;
       padding-top: 16px;
       ul {
         display: flex;
         list-style: none;
         gap: 40px;
-        align-items: center;
         a {
           text-decoration: none;
           @include text($text-xm, $text-semibold, $text-black);
@@ -36,6 +36,8 @@ header {
       display: flex;
       align-items: center;
       gap: 1rem;
+      position: absolute;
+      right: -1rem;
       .btn-header {
         transition: all 0.5s;
         outline: none;
@@ -45,12 +47,12 @@ header {
           $text-white,
           $bg-c1-primary,
           10px 15px,
-          none,
+          $border,
           50px
         );
         &:hover {
           color: $text-c1-primary;
-          background-color: $bg-white;
+          background-color: $bg-transparent;
           border: $border;
         }
       }
