--- a/Sass/pages/index/_index.scss
+++ b/Sass/pages/index/_index.scss
@@ -3,3 +3,5 @@
 @import "../index/header";
 @import "../index/carousel";
 @import "../index/_description";
+@import "../index/content";
+@import "../index/_card-session";
