--- a/Sass/pages/index/_description.scss
+++ b/Sass/pages/index/_description.scss
@@ -1,14 +1,15 @@
 .description-bg {
-  position: relative;
-  top: -39rem;
+  position: absolute;
+  top: 33em;
   background-image: url(../../../img/purple_bottom_wave_01.png);
   background-position: center;
   background-size: cover;
+  width: 100%;
   height: 26rem;
 }
+
 .description {
-  position: relative;
-  top: -40rem;
+  padding-bottom: 4rem;
   background-color: $bg-c1-secondary;
   .description-list {
     .description-item {
@@ -20,9 +21,12 @@
             font-size: $text-5xl;
             color: $text-black;
           }
-          &:hover {
-            color: $text-c1-primary;
+          &::before {
+            content: "";
           }
+        }
+        &::before {
+          color: $text-white;
         }
       }
 
@@ -33,7 +37,11 @@
           h6 {
             @include text($text-xm, $text-semibold, $text-c1-primary);
           }
+          &:hover {
+            color: $text-white;
+          }
         }
+
         p {
           @include text($text-xm, $text-regular, $text-black);
         }
