--- a/Sass/pages/index/_header.scss
+++ b/Sass/pages/index/_header.scss
@@ -4,6 +4,8 @@ header {
   background-size: contain;
   height: 240px;
   background-repeat: no-repeat;
+  position: absolute;
+  width: 100%;
   .header {
     display: flex;
     gap: 3rem;
@@ -25,6 +27,7 @@ header {
         gap: 40px;
         a {
           text-decoration: none;
+          transition: all 0.3s;
           @include text($text-xm, $text-semibold, $text-black);
           &:hover {
             color: $text-c1-primary;
