--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,8 @@ header {
   background-size: contain;
   height: 240px;
   background-repeat: no-repeat;
+  position: absolute;
+  width: 100%;
 }
 header .header {
   display: flex;
@@ -40,6 +42,7 @@ header .header .header-nav ul {
 }
 header .header .header-nav ul a {
   text-decoration: none;
+  transition: all 0.3s;
   font-size: 14px;
   font-weight: 600;
   color: #000;
@@ -87,9 +90,6 @@ header .header .header-link .fa-instagram {
   margin: 0 0.5rem;
 }
 
-.carousel {
-  top: -290px;
-}
 .carousel .carousel_item {
   display: flex;
   align-items: center;
@@ -129,40 +129,42 @@ header .header .header-link .fa-instagram {
 .carousel .carousel_item .carousel-right .img-girl {
   width: 130%;
   margin-left: -25%;
+  position: relative;
+  top: -3rem;
 }
 .carousel .carousel_item .carousel-right .carousel-img .img-hello {
-  top: 8rem;
+  top: 5rem;
   right: 15rem;
   position: absolute;
 }
 .carousel .carousel_item .carousel-right .carousel-img .img-ciao {
-  top: 22rem;
-  right: 6rem;
+  top: 19rem;
+  right: 7rem;
   position: absolute;
 }
 .carousel .carousel_item .carousel-right .carousel-img .img-bonjour {
-  top: 39rem;
-  right: 9rem;
+  top: 36.5rem;
+  right: 8.5rem;
   position: absolute;
 }
 .carousel .carousel_item .carousel-right .carousel-img .img-guten {
-  top: 39rem;
+  top: 36rem;
   right: 42rem;
   position: absolute;
 }
 
 .description-bg {
-  position: relative;
-  top: -39rem;
+  position: absolute;
+  top: 33em;
   background-image: url(../../../img/purple_bottom_wave_01.png);
   background-position: center;
   background-size: cover;
+  width: 100%;
   height: 26rem;
 }
 
 .description {
-  position: relative;
-  top: -40rem;
+  padding-bottom: 4rem;
   background-color: #dcd1f2;
 }
 .description .description-list .description-item {
@@ -173,8 +175,11 @@ header .header .header-link .fa-instagram {
   font-size: 50px;
   color: #000;
 }
-.description .description-list .description-item .description-icon a:hover {
-  color: #b61984;
+.description .description-list .description-item .description-icon a::before {
+  content: "";
+}
+.description .description-list .description-item .description-icon::before {
+  color: #fff;
 }
 .description .description-list .description-item .description-content {
   width: 18rem;
@@ -187,8 +192,118 @@ header .header .header-link .fa-instagram {
   font-weight: 600;
   color: #b61984;
 }
+.description .description-list .description-item .description-content a:hover {
+  color: #fff;
+}
 .description .description-list .description-item .description-content p {
   font-size: 14px;
   font-weight: 400;
   color: #000;
+}
+.content {
+  background-image: url(../../../img/purple_top_wave_01.png);
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+.content .content-list {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.content .content-list .content-img {
+  width: 43%;
+  margin-left: 1rem;
+}
+.content .content-list .content-left {
+  width: 35%;
+  top: 4em;
+  left: 11em;
+  position: absolute;
+}
+.content .content-list .content-left .content-item h5 {
+  width: 83%;
+  font-size: 20px;
+  font-weight: 400;
+  color: #000;
+  line-height: 3rem;
+  font-style: italic;
+  padding: 1rem 0;
+}
+.content .content-list .content-left .content-item span {
+  font-size: 14px;
+  font-weight: 600;
+  color: #b61984;
+}
+.content .content-list .content-right {
+  padding-right: 6rem;
+  width: 50%;
+}
+.content .content-list .content-right h6 {
+  font-size: 16px;
+  font-weight: 600;
+  color: #b61984;
+}
+.content .content-list .content-right h1 {
+  font-size: 50px;
+  font-weight: 700;
+  color: #000;
+  width: 50%;
+}
+.content .content-list .content-right p {
+  font-size: 16px;
+  font-weight: 400;
+  color: #000;
+  width: 87%;
+  line-height: 2rem;
+  margin: 1em em 0;
+  margin-bottom: 3.7rem;
+}
+.content .content-list .content-right button {
+  font-size: 14px;
+  font-weight: 600;
+  color: #fff;
+  background: #b61984;
+  padding: 12px 30px;
+  border: 1px solid #b61984;
+  border-radius: 50px;
+  outline: none;
+  position: absolute;
+  bottom: 6rem;
+}
+.content .content-list .content-right button:hover {
+  color: #b61984;
+  background-color: #fff;
+  border: 1px solid #b61984;
+  transition: all 0.5s;
+}
+
+.slick-dots li button:before {
+  font-size: 16px;
+  color: #b61984;
+}
+
+.slick-dots li.slick-active button:before {
+  color: #b61984;
+}
+
+.slick-dots {
+  left: -0.5rem;
+  width: 25%;
+  text-align: left;
+}
+
+.slick-prev,
+.slick-next {
+  display: none !important;
+}
+
+.card-session {
+  padding: 5rem 0;
+}
+.card-session .card-session-list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 3rem;
 }
