--- a/Sass/pages/index/_index.scss
+++ b/Sass/pages/index/_index.scss
@@ -6,3 +6,7 @@
 @import "../index/content";
 @import "../index/_card-session";
 @import "../index/courses";
+@import "../index/schedule";
+@import "../index/buy";
+@import "../index/inner";
+@import "../index/footer";
