--- a/Sass/theme/_variable.scss
+++ b/Sass/theme/_variable.scss
@@ -25,6 +25,8 @@ $bg-white: #fff;
 $bg-transparent: transparent;
 $bg-c1-primary: #b61984;
 $bg-c1-secondary: #dcd1f2;
+$bg-c2-secondary: #efefef;
+$bg-c3-secondary: #ffd043;
 $border: 1px solid#b61984;
 // mixin
 @mixin text($fs, $fw, $c) {
