--- a/css/style.css
+++ b/css/style.css
@@ -325,7 +325,12 @@ header .header .header-link .fa-instagram {
   gap: 3rem;
 }
 .card-session .card-session-list .card-session-item {
+  transition: all 0.5s;
   border: none;
+}
+.card-session .card-session-list .card-session-item:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 0 7px 1px #888888;
 }
 .card-session .card-session-list .card-session-item .card-session-img {
   border-radius: 10px 10px 0 0;
@@ -397,12 +402,30 @@ header .header .header-link .fa-instagram {
   width: 75%;
 }
 .courses .courses-list .courses-left .courses-text {
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 400;
   color: #000;
   width: 75%;
 }
 .courses .courses-list .courses-left .courses-button .btn-courses {
+  font-size: 14px;
+  font-weight: 600;
+  color: #b61984;
+  background: transparent;
+  padding: 12px 30px;
+  border: 1px solid #b61984;
+  border-radius: 50px;
+  text-transform: uppercase;
+  outline: none;
+  margin-right: 1rem;
+}
+.courses .courses-list .courses-left .courses-button .btn-courses:hover {
+  color: #fff;
+  background-color: #b61984;
+  border: 1px solid #b61984;
+  transition: all 0.5s;
+}
+.courses .courses-list .courses-left .courses-button .btn-courses2 {
   font-size: 14px;
   font-weight: 600;
   color: #fff;
@@ -412,14 +435,16 @@ header .header .header-link .fa-instagram {
   border-radius: 50px;
   text-transform: uppercase;
   outline: none;
-  margin-top: 2rem;
   margin-right: 1rem;
 }
-.courses .courses-list .courses-left .courses-button .btn-courses:hover {
+.courses .courses-list .courses-left .courses-button .btn-courses2:hover {
   color: #b61984;
-  background-color: #fff;
+  background-color: transparent;
   border: 1px solid #b61984;
   transition: all 0.5s;
+}
+.courses .courses-list .courses-left .courses-button .btn-courses2 i {
+  padding-right: 0.5rem;
 }
 .courses .courses-list .courses-right .courses-img {
   width: 37rem;
@@ -427,11 +452,29 @@ header .header .header-link .fa-instagram {
 
 .seo {
   background-color: #dcd1f2;
+  position: relative;
+  padding: 3rem 0;
 }
 .seo .seo-list {
+  position: relative;
+  z-index: 1;
   display: flex;
   gap: 5rem;
-  align-items: center;
+}
+.seo .seo-list .seo-right p {
+  font-size: 16px;
+  font-weight: 600;
+  color: #b61984;
+}
+.seo .seo-list .seo-right h1 {
+  font-size: 50px;
+  font-weight: 600;
+  color: #000;
+}
+.seo .seo-list .seo-right .seo-text {
+  font-size: 16px;
+  font-weight: 400;
+  color: #000;
 }
 .seo .seo-list .seo-right .seo-card-list {
   width: 33rem;
@@ -444,10 +487,508 @@ header .header .header-link .fa-instagram {
 }
 .seo .seo-list .seo-right .seo-card-list .seo-card-item .seo-card-header {
   background-color: #dcd1f2;
+  padding-left: 0;
+}
+.seo .seo-list .seo-right .seo-card-list .seo-card-item .seo-card-header .seo-card-btn {
+  padding-left: 0;
+  position: relative;
+  font-size: 16px;
+  font-weight: 600;
+  color: #b61984;
+  text-decoration: none;
+}
+.seo .seo-list .seo-right .seo-card-list .seo-card-item .seo-card-header .seo-card-btn i {
+  font-size: 20px;
+  color: #000;
+  margin-right: 1rem;
+}
+.seo .seo-list .seo-right .seo-card-list .seo-card-item .seo-card-header .seo-card-btn .seo-card-icon {
+  position: absolute;
+  top: 8px;
+  right: -30px;
 }
 .seo .seo-list .seo-right .seo-card-list .seo-card-item .seo-card-bot .seo-card-body {
   background-color: #dcd1f2;
 }
+.seo .seo-list .seo-right .btn-seo {
+  transition: all 0.5s;
+  outline: none;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 600;
+  color: #fff;
+  background: #b61984;
+  padding: 15px 30px;
+  border: 1px solid #b61984;
+  border-radius: 50px;
+}
+.seo .seo-list .seo-right .btn-seo:hover {
+  color: #b61984;
+  background-color: transparent;
+  border: 1px solid #b61984;
+}
+.seo .seo-img {
+  position: absolute;
+  bottom: 0;
+}
 .seo .seo-img img {
   width: 100%;
+}
+
+.schedule .schedule-list {
+  text-align: center;
+}
+.schedule .schedule-list .schedule-title {
+  padding-bottom: 3rem;
+  font-size: 60px;
+  font-weight: 700;
+  color: #000;
+}
+.schedule .schedule-list .schedule-card {
+  text-align: left;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
+.schedule .schedule-list .schedule-card .schedule-item {
+  border: none;
+  background-color: #efefef;
+  width: 30%;
+  box-shadow: 4px 15px 25px -15px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+}
+.schedule .schedule-list .schedule-card .schedule-item .card-schedule {
+  position: absolute;
+  top: 2.5rem;
+}
+.schedule .schedule-list .schedule-card .schedule-item .card-schedule .card-title {
+  font-size: 14px;
+  font-weight: 400;
+  color: #fff;
+}
+.schedule .schedule-list .schedule-card .schedule-item .card-schedule .card-text {
+  font-size: 30px;
+  font-weight: 600;
+  color: #fff;
+}
+.schedule .schedule-list .schedule-card .schedule-item .card-ul li {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  background-color: #efefef;
+  display: flex;
+  justify-content: space-between;
+  font-size: 14px;
+  font-weight: 600;
+  color: #000;
+}
+.schedule .schedule-list .schedule-btn {
+  margin: 3rem;
+  transition: all 0.5s;
+  outline: none;
+  font-size: 14px;
+  font-weight: 600;
+  color: #fff;
+  background: #b61984;
+  padding: 15px 30px;
+  border: 1px solid #b61984;
+  border-radius: 50px;
+}
+.schedule .schedule-list .schedule-btn:hover {
+  color: #b61984;
+  background-color: transparent;
+  border: 1px solid #b61984;
+}
+
+.buy .buy-list {
+  background-color: #b61984;
+  border-radius: 2rem;
+  height: 441px;
+  position: relative;
+}
+.buy .buy-list .buy-left img {
+  position: absolute;
+  left: -8rem;
+  top: -2rem;
+}
+.buy .buy-list .buy-left .buy-content {
+  position: absolute;
+  top: 7rem;
+  left: 5rem;
+}
+.buy .buy-list .buy-left .buy-content .buy-text {
+  font-size: 14px;
+  font-weight: 400;
+  color: #fff;
+}
+.buy .buy-list .buy-left .buy-content .buy-title {
+  font-size: 30px;
+  font-weight: 600;
+  color: #fff;
+}
+.buy .buy-list .buy-left .buy-content .buy-price {
+  font-size: 50px;
+  font-weight: 700;
+  color: #fff;
+}
+.buy .buy-list .buy-left .buy-content .buy-btn {
+  margin-top: 2rem;
+  transition: all 0.5s;
+  outline: none;
+  font-size: 14px;
+  font-weight: 600;
+  color: #b61984;
+  background: #fff;
+  padding: 15px 30px;
+  border: 1px solid #b61984;
+  border-radius: 50px;
+}
+.buy .buy-list .buy-left .buy-content .buy-btn:hover {
+  color: #fff;
+  background-color: transparent;
+  border: 1px solid #fff;
+}
+.buy .buy-list .buy-right img {
+  position: absolute;
+  top: -2rem;
+  right: 1rem;
+}
+
+.event {
+  padding-top: 8rem;
+}
+.event .container .event-text {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 3rem;
+}
+.event .container .event-text .event-title {
+  font-size: 60px;
+  font-weight: 700;
+  color: #000;
+}
+.event .container .event-text .event-btn {
+  transition: all 0.5s;
+  outline: none;
+  font-size: 14px;
+  font-weight: 600;
+  color: #fff;
+  background: #b61984;
+  padding: 15px 30px;
+  border: 1px solid #b61984;
+  border-radius: 50px;
+}
+.event .container .event-text .event-btn:hover {
+  color: #b61984;
+  background-color: #fff;
+  border: 1px solid #b61984;
+}
+.event .container .event-list {
+  gap: 3rem;
+}
+.event .container .event-list .event-item {
+  border: none;
+  transition: all 0.5s;
+}
+.event .container .event-list .event-item:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 0 7px 1px #888888;
+}
+.event .container .event-list .event-item img {
+  border-radius: 10px 10px 0 0;
+}
+.event .container .event-list .event-item .event-card-body .event-card-title {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.event .container .event-list .event-item .event-card-body .event-card-title span {
+  border-right: 1px solid gray;
+  font-size: 20px;
+  font-weight: 700;
+  color: #b61984;
+}
+.event .container .event-list .event-item .event-card-body .event-card-title h2 {
+  font-size: 30px;
+  font-weight: 700;
+  color: #000;
+  padding-left: 1rem;
+  width: 88%;
+}
+.event .container .event-list .event-item .event-card-body .event-card-text {
+  font-size: 16px;
+  font-weight: 400;
+  color: #000;
+}
+.event .container .event-list .event-item .event-card-body a {
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 600;
+  color: #b61984;
+}
+.event .container .event-list .event-item .event-card-body a:hover {
+  color: #000;
+}
+
+.inner-bg-top {
+  background-color: #ffd043;
+}
+
+.inner {
+  background-color: #ffd043;
+  text-align: center;
+  height: 28rem;
+}
+.inner .container .inner-list {
+  align-items: center;
+  gap: 3rem;
+}
+.inner .container .inner-list .inner-item {
+  background-color: #ffd043;
+  border: none;
+}
+.inner .container .inner-list .inner-item .inner-text {
+  font-size: 16px;
+  font-weight: 600;
+  color: #b61984;
+}
+.inner .container .inner-list .inner-item .inner-price {
+  display: flex;
+  gap: 0.5rem;
+  justify-content: center;
+  align-items: center;
+  font-size: 60px;
+  font-weight: 700;
+  color: #000;
+}
+.inner .container .inner-list .inner-item .inner-price span {
+  font-size: 30px;
+}
+.inner .container .inner-list .inner-item .inner-card-body .inner-body {
+  font-size: 14px;
+  font-weight: 600;
+  color: #000;
+}
+.inner .container .inner-list .inner-item-main {
+  padding: 3rem 0 5rem;
+  box-shadow: rgba(0, 0, 0, 0.2) 4px 15px 25px -15px;
+  background-color: #fff;
+  border-radius: 10px;
+}
+.inner .container .inner-list .inner-item-main .inner-card-top .inner-text {
+  font-size: 16px;
+  font-weight: 600;
+  color: #b61984;
+}
+.inner .container .inner-list .inner-item-main .inner-card-top .inner-price {
+  display: flex;
+  gap: 0.5rem;
+  justify-content: center;
+  align-items: center;
+  font-size: 60px;
+  font-weight: 700;
+  color: #000;
+}
+.inner .container .inner-list .inner-item-main .inner-card-top .inner-price span {
+  font-size: 30px;
+}
+.inner .container .inner-list .inner-item-main .inner-card-body .inner-body {
+  font-size: 14px;
+  font-weight: 600;
+  color: #000;
+}
+.inner .container .inner-list .inner-item-main .inner-card-body .inner-body::before {
+  content: "";
+}
+.inner-bg-bot {
+  background-color: #ffd043;
+}
+
+.form {
+  position: relative;
+  z-index: 1;
+}
+.form .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.form .container .form-right {
+  background-color: #fff;
+  box-shadow: 0 30px 30px -10px rgba(0, 0, 0, 0.2);
+  padding: 5rem 2rem;
+  border-radius: 10px;
+  width: 33%;
+}
+.form .container .form-right .form-title {
+  font-size: 30px;
+  font-weight: 600;
+  color: #000;
+}
+.form .container .form-right .form1 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+  color: #b61984;
+}
+.form .container .form-right .form1 .icon1 {
+  position: absolute;
+  right: 30.5rem;
+  z-index: 1;
+}
+.form .container .form-right .form1 .input1 {
+  position: relative;
+  border-radius: 50px;
+}
+.form .container .form-right .form1 .icon2 {
+  position: absolute;
+  right: 19rem;
+}
+.form .container .form-right .form1 .input2 {
+  border-radius: 50px;
+}
+.form .container .form-right .form2 {
+  position: relative;
+  color: #b61984;
+}
+.form .container .form-right .form2 .icon3 {
+  position: absolute;
+  right: 19.7rem;
+  top: 11px;
+}
+.form .container .form-right .form2 .input3 {
+  padding-left: 2rem;
+  border-radius: 50px;
+}
+.form .container .form-right .form3 {
+  position: relative;
+  color: #b61984;
+}
+.form .container .form-right .form3 .icon4 {
+  position: absolute;
+  top: 9px;
+  right: 19.9rem;
+}
+.form .container .form-right .form3 .form-area {
+  height: 90px;
+}
+.form .container .form-right .form-btn {
+  transition: all 0.5s;
+  outline: none;
+  font-size: 14px;
+  font-weight: 600;
+  color: #fff;
+  background: #b61984;
+  padding: 15px 50px;
+  border: 1px solid #b61984;
+  border-radius: 50px;
+}
+.form .container .form-right .form-btn:hover {
+  color: #b61984;
+  background-color: #fff;
+  border: 1px solid #b61984;
+}
+
+footer {
+  position: relative;
+}
+footer .footer-img {
+  position: absolute;
+  top: -20rem;
+}
+footer .footer {
+  top: 6rem;
+  left: 4.5rem;
+  position: absolute;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+footer .footer .footer-item1 {
+  font-size: 16px;
+  font-weight: 400;
+  color: #fff;
+}
+footer .footer .footer-item1 h4 {
+  font-size: 30px;
+  font-weight: 600;
+  color: #fff;
+}
+footer .footer .footer-item1 ul {
+  list-style: none;
+}
+footer .footer .footer-item1 ul li {
+  padding: 10px 0;
+}
+footer .footer .footer-item1 ul li i {
+  padding-right: 1rem;
+}
+footer .footer .footer-item1 .footer-icon i {
+  padding-right: 1rem;
+  cursor: pointer;
+}
+footer .footer .footer-item1 .footer-icon i:hover {
+  color: #000;
+}
+footer .footer .footer-item h4 {
+  font-size: 30px;
+  font-weight: 600;
+  color: #fff;
+}
+footer .footer .footer-item ul {
+  list-style: none;
+}
+footer .footer .footer-item ul li {
+  padding: 10px 0;
+}
+footer .footer .footer-item ul li a {
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 400;
+  color: #fff;
+}
+footer .footer .footer-item2 h4 {
+  font-size: 30px;
+  font-weight: 600;
+  color: #fff;
+}
+footer .footer .footer-item2 .footer-btn1 {
+  padding-top: 2rem;
+  padding-bottom: 1rem;
+}
+footer .footer .footer-item2 .footer-btn1 button {
+  transition: all 0.5s;
+  outline: none;
+  font-size: 14px;
+  font-weight: 600;
+  color: #fff;
+  background: #b61984;
+  padding: 15px 50px;
+  border: 1px solid #b61984;
+  border-radius: 50px;
+}
+footer .footer .footer-item2 .footer-btn1 button:hover {
+  color: #b61984;
+  background-color: #fff;
+  border: 1px solid #b61984;
+}
+footer .footer .footer-item2 .footer-btn2 button {
+  transition: all 0.5s;
+  outline: none;
+  font-size: 14px;
+  font-weight: 600;
+  color: #b61984;
+  background: #fff;
+  padding: 15px 50px;
+  border: 1px solid #b61984;
+  border-radius: 50px;
+}
+footer .footer .footer-item2 .footer-btn2 button:hover {
+  color: #fff;
+  background-color: #b61984;
+  border: 1px solid #b61984;
+}
+footer .footer-bg {
+  padding-top: 3.5rem;
 }
